--- a/Matthias_muehlberg.html
+++ b/Matthias_muehlberg.html
@@ -112,7 +112,7 @@
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Matthias&nbsp;Mühlberg</h2>
             <p>Sporttherapeut<br/>
-            <a href="mailto:matthias.muehlberg@physiomovimento.ch">E-Mail</a></p>
+            <a href="mailto:movimento@physio-hin.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
@@ -156,7 +156,7 @@
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
                 061 963 00 23<br/>
-                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                <a href="mailto:movimento@physio-hin.ch">movimento@physio-hin.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
