--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Barbara&nbsp;Longo</h2>
-            <p>Dipl. Physiotherapeutin FH<br/><a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a></p>
+            <p>Dipl. Physiotherapeutin FH<br/><a href="mailto:barbaralongo.movimento@physio-hin.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
@@ -166,7 +166,7 @@
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
                 061 963 00 23<br/>
-                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                <a href="mailto:movimento@physio-hin.ch">movimento@physio-hin.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
