--- a/kontakt.html
+++ b/kontakt.html
@@ -60,7 +60,7 @@
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
                 061 963 00 23<br/>
-                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                <a href="mailto:movimento@physio-hin.ch">movimento@physio-hin.ch</a>
             </p>
             <h2>Anfahrt</h2>
             <div class="col-xs-12 no-gutter">
