--- a/team.html
+++ b/team.html
@@ -113,7 +113,7 @@
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;FH
                         <br/>
-                        <a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:barbaralongo.movimento@physio-hin.ch">E-Mail</a>
                         <br/>
                         <a href="barbara-longo.html" role="button">
                             Mehr&hellip;
@@ -130,7 +130,7 @@
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;FH
                         <br/>
-                        <a href="mailto:melina.duerr@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:melinaduerr.movimento@physio-hin.ch">E-Mail</a>
                         <br/>
                         <a href="melina-duerr.html" role="button">
                             Mehr&hellip;
@@ -166,7 +166,7 @@
                     <p>
                         Dipl.&nbsp;Physiotherapeutin&nbsp;FH
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/>
                         <a href="Vera-schmidt.html" role="button">
                             Mehr&hellip;
@@ -185,7 +185,7 @@
                     <p>
                         Sporttherapeut
                         <br/>                                            
-                        <a href="mailto:matthias.muehlberg@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
                         <a href="Matthias_muehlberg.html" role="button">
                             Mehr&hellip;
@@ -202,7 +202,7 @@
                     <p>
                         Sporttherapeut&nbsp;BSc&nbsp;
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
                         <a href="janik_arnet.html" role="button">
                                 Mehr&hellip;
@@ -221,7 +221,7 @@
                     <p>
                         Sporttherapeutin
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
                         <a href="melanie-mangold.html" role="button">
                                 Mehr&hellip;
@@ -238,7 +238,7 @@
                     <p>
                         Sporttherapeut 
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
                         <a href="Luca.html" role="button">
                                     Mehr&hellip; 
@@ -257,7 +257,7 @@
                     <p>
                         Raumpflegerin
                         <br/>                                            
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
                     </p>
                 </div>
@@ -271,7 +271,7 @@
                     <p>
                         Raumpflegerin
                         <br/>                                            
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
                     </p>
                 </div>
@@ -298,7 +298,7 @@
                 Ueli Schadweg 3<br/>
                 4436 Oberdorf/BL<br/>
                 061 963 00 23<br/>
-                <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                <a href="mailto:movimento@physio-hin.ch">movimento@physio-hin.ch</a>
             </p>
             <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
