--- a/team.html
+++ b/team.html
@@ -149,7 +149,7 @@
                     <p>
                         Dipl.&nbsp;Physiotherapeut
                         <br/>
-                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/>
                         <a href="Tobias Elmiger.html" role="button">
                             Mehr&hellip;
