--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <br>(3-Sterne Part Time Care)</b><br/>
                     <br><br/>
                     <b>Nordic Walking:<br>  
-                    jeweils Freitag 14:00- 15:30<br/>               
+                    jeweils Dienstag 14:00- 16:00<br/>               
                     <p class="hidden"><b>Bitte beachten Sie unsere<br></b><a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2023.pdf" target="_blank"><b> Öffnungszeiten  an den <br>kommenden Feiertagen<br/></b></a></p>
                     
                     
