--- a/physio.html
+++ b/physio.html
@@ -133,7 +133,7 @@
                     <i class="icon fa-icon fa fa-clock-o"></i>
                 </div>
                 <h1>Therapiedauer</h1>
-                <p>Eine Therapiesitzung dauert in der Regel 20-25 Minuten.</p>
+                <p>Eine Therapiesitzung dauert in der Regel 25 Minuten.</p>
             </div>
         </div>
         <div class="footer col-xs-12">
