--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -153,6 +153,7 @@
             <li>Zusatzausbildung im Umgang mit chronifizierenden Rückenschmerzen</li>
             <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 2b</li>
             <li>Diplom Physiotherapie Kantonsspital Basel 1998</li>
+            <li>2024 Zertifizierte GLA:D® Schweiz Arthrose Therapeutin</li>
         </ul>
     </div>
     <div class="row">
