--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -168,6 +168,7 @@
             <li>Zusatzausbildung ESP Sportphysiotherapie</li>
             <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 3</li>
             <li>Diplom Physiotherapie Bethesda-Spital Basel 2003</li>
+            <li>2024 Zertifizierte GLA:D® Schweiz Arthrose Therapeutin</li>
         </ul>
     </div>
     <div class="row">
