--- a/Luca.html
+++ b/Luca.html
@@ -125,6 +125,12 @@
         <div class="col-xs-9">Sporttherapeut Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
+        <div class="col-lg-2 col-xs-3">Seit 2024</div>
+        <div class="col-xs-9">Praktikum in der Abteilung für Sportwissenschaft Crossklinik 
+            Basel
+            </div>
+    </div>
+    <div class="row">
         <div class="col-lg-2 col-xs-3">2022-2023</div>
         <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patient:innen im sportmedizinischen Ambulatorium, Universität Basel</div>
     </div>
@@ -146,6 +152,8 @@
     <div class="row">
         <ul>
             <li>2020 Beginn Bachelor of Science in Sportwissenschaft (Prävention und Gesundheitsförderung), Basel</li>
+            <li>2023 Beginn Personal Health Coach CAS, Saluta Coach AG Universität Basel</li>
+            <li>2020-2023 Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) Universität Basel </li>
         </ul>
     </div>
     <div class="row">
