--- a/team.html
+++ b/team.html
@@ -249,11 +249,43 @@
             </div>   
         </div>                                
     </div>
+    
     <div class="row">             
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <h1>Shevin&nbsp;Al&nbsp;Isa</h1>
+                    <p>
+                        Raumpflegerin
+                        <br/>                                            
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
+                        <br/<>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">
+            </div> 
+        </div> 
+    </div> 
+    <div class="row">             
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1><div class="row">             
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Bahrije&nbsp;Krasniqi&nbsp;Baftiu</h1>
+                    <p>
+                        Raumpflegerin
+                        <br/>                                            
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
+                        <br/<>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Bahrije Krasniqi Baftiu.jpeg">
+            </div> 
+        </div> 
+    </div> &nbsp;Al&nbsp;Isa</h1>
                     <p>
                         Raumpflegerin
                         <br/>                                            
