--- a/team.html
+++ b/team.html
@@ -198,13 +198,13 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
-                    <h1>Janik&nbsp;Arnet</h1>
+                    <h1>Jovan&nbsp;Ristic</h1>
                     <p>
                         Sporttherapeut&nbsp;BSc&nbsp;
                         <br/>
                         <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
-                        <a href="janik_arnet.html" role="button">
+                        <a href="jovan_ristic.html" role="button">
                                 Mehr&hellip;
                         </a>                        
                     </p>
