--- a/team.html
+++ b/team.html
@@ -209,7 +209,7 @@
                         </a>                        
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Janik Arnet end.png">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Jovan.jpeg">
             </div>  
         </div>                  
     </div>
@@ -248,8 +248,7 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/lucaneu.jpg">
             </div>   
         </div>                                
-    </div>
-    
+    </div> 
     <div class="row">             
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
@@ -264,13 +263,7 @@
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Shevin.jpg">
             </div> 
-        </div> 
-    </div> 
-    <div class="row">             
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
-                    <h1><div class="row">             
+            </div>                 
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
