--- a/team.html
+++ b/team.html
@@ -200,7 +200,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Jovan&nbsp;Ristic</h1>
                     <p>
-                        Sporttherapeut&nbsp;BSc&nbsp;
+                        Sporttherapeut&nbsp;&nbsp;
                         <br/>
                         <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/<>
