--- a/Luca.html
+++ b/Luca.html
@@ -121,15 +121,16 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2023</div>
-        <div class="col-xs-9">Sporttherapeut Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2024</div>
+        <div class="col-lg-2 col-xs-3">2024</div>
         <div class="col-xs-9">Praktikum in der Abteilung für Sportwissenschaft Crossklinik 
             Basel
             </div>
     </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">Seit 2023</div>
+        <div class="col-xs-9">Sporttherapeut Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+    </div>
+    
     <div class="row">
         <div class="col-lg-2 col-xs-3">2022-2023</div>
         <div class="col-xs-9">Zuweisungen von Kräftigungsübungen für Patient:innen im sportmedizinischen Ambulatorium, Universität Basel</div>
