--- a/Luca.html
+++ b/Luca.html
@@ -153,7 +153,7 @@
     <div class="row">
         <ul>
             <li>2023 Beginn Personal Health Coach CAS, Saluta Coach AG Universität Basel</li>
-            <li>2020-2023 Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) Universität Basel </li>
+            <li>Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) Universität Basel 2023</li>
         </ul>
     </div>
     <div class="row">
