--- a/Vera-schmidt.html
+++ b/Vera-schmidt.html
@@ -140,9 +140,9 @@
     </div>
     <div class="row">
         <ul>
-            <li>2022 Spiraldynamik ® Lehrgang Basic MED </li>
-            <li>2022 Zusatzausbildung in Manueller Therapie Maitland Konzept, Level I</li>
-            <li>2019 Motivational Interviewing ZHAW</li>
+            <li>Spiraldynamik ® Lehrgang Basic MED </li>
+            <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level I</li>
+            <li>Motivational Interviewing ZHAW</li>
             <li>Bachelor of Science in Physiotherapie BFH 2018</li>
              
         </ul>
