--- a/jovan_ristic.html
+++ b/jovan_ristic.html
@@ -143,7 +143,7 @@
     <div class="row">
         <ul>
             <li>2024 Beginn Master of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) und Geschichte Universität Basel</li>
-            <li>2020-2023 Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) und Geschichte Universität Basel</li>
+            <li>Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) und Geschichte Universität Basel 2023</li>
             
         </ul>
     </div>
