--- a/Matthias_muehlberg.html
+++ b/Matthias_muehlberg.html
@@ -141,9 +141,8 @@
     </div>
     <div class="row">
         <ul>
-            <li>2020 Beginn Bachelor of Science in Sportwissenschaft mit Zweitfach Mathematik Universität Basel</li>
             <li>2024 Beginn Master of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) und Mathematik Universität Basel</li>
-            <li>2020-2023 Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) und Mathematik Universität Basel</li>
+            <li>Bachelor of Science in Sport, Bewegung und Gesundheit (Sportwissenschaft) und Mathematik Universität Basel 2023</li>
         </ul>
     </div>
     <div class="row">
