--- a/melanie-mangold.html
+++ b/melanie-mangold.html
@@ -149,13 +149,13 @@
     </div>
     <div class="row">
         <ul>
-            <li>1. & 2. Semester Masterstudium Physiotherapie FH, Schwerpunkt Sport, BFH Bern 2021-2023</li>
-            <li>TRX Functional Training 2022</li>
-            <li>Stretching Instructor 2022</li>
-            <li>Motivational Interviewing 2021</li>
-            <li>Manuelle Therapie FOI, Mulligan 2020</li>
-            <li>Bachelorstudium Physiotherapie FH, BZG Münchenstein 2015-2019</li>
-            <li>Fachfrau Gesundheit EFZ, Bethesda Spital Basel mit Berufsmatura Fachrichtung Gesundheit  2011-2014</li>
+            <li>1. & 2. Semester Masterstudium Physiotherapie FH, Schwerpunkt Sport, BFH Bern</li>
+            <li>TRX Functional Training</li>
+            <li>Stretching Instructor</li>
+            <li>Motivational Interviewing</li>
+            <li>Manuelle Therapie FOI, Mulligan</li>
+            <li>Bachelor of Science in Physiotherapie BFH 2019</li>
+            <li>Fachfrau Gesundheit EFZ, Bethesda Spital Basel mit Berufsmatura Fachrichtung Gesundheit 2014</li>
         </ul>
     </div>
     <div class="row">
