--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -158,6 +158,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>Zertifizierte GLA:D® Schweiz Arthrose Therapeutin</li>
             <li>Funktionsorientierte Faszien Therapie (FOFT)</li>
             <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
             <li>TRX Sports Medicine Suspension Trainer L2</li>
@@ -168,7 +169,7 @@
             <li>Zusatzausbildung ESP Sportphysiotherapie</li>
             <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 3</li>
             <li>Diplom Physiotherapie Bethesda-Spital Basel 2003</li>
-            <li>2024 Zertifizierte GLA:D® Schweiz Arthrose Therapeutin</li>
+            
         </ul>
     </div>
     <div class="row">
