--- a/team.html
+++ b/team.html
@@ -275,7 +275,7 @@
                         <br/<>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Bahrije Krasniqi Baftiu.jpeg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Bahrjie neu.jpg">
             </div> 
         </div> 
 
