--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h1>Aktuell</h1>
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/exclamation-mark-9765.svg"/>
-                <a href="img/movimento_final_070824_h.265.mov" target="_blank"><b>Schau rein!<br> 
+                <a href="img/movimento_final_070824_h.265.mov" target="_blank"><b>Schau rein!</b><br> 
                     <b>Nordic Walking:<br>  
                     jeweils Dienstag 14:30- 16:00</b><br/>
                     <br>               
