--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                 <h1>Aktuell</h1>
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/exclamation-mark-9765.svg"/>
-                <a href="img/movimento_final_070824_h.265.mov" target="_blank"><b>Schau rein!</b><br> 
+                <p<a href="img/movimento_final_070824_h.265.mov" target="_blank"><b>Schau rein!</b></a><br> 
                     <br> 
                     <b>Nordic Walking:<br>  
                     jeweils Dienstag 14:30- 16:00</b><br/>
-                    <br>               
+                    <br></p>           
                 
                     <p class="hidden"><b></b>Bitte beachten Sie unsere <a href="spezielle Öffnungszeiten Weihnachten_Neujahr 2021 .pdf" target="_blank"><b>Öffnungszeiten an Weihnachten/Neujahr</b></a></p>
                     </b>
