--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h1>Aktuell</h1>
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/exclamation-mark-9765.svg"/>
-                <p<a href="img/movimento_final_070824_h.265.mov" target="_blank"><b>Schau rein!</b></a><br> 
+                <a href="img/movimento_final_070824_h.265.mov" target="_blank"><b>Schau rein!</b></a><br> 
                     <br> 
                     <b>Nordic Walking:<br>  
                     jeweils Dienstag 14:30- 16:00</b><br/>
@@ -283,7 +283,7 @@
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
-                <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/></p> 
+                <p class="hidden"><a href="docs/Flyer Nordic Walking.pdf" target="_blank"><b> Info Outdoor Training</b></a><br/> 
                 
                            
             </div>
