--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/fitness.png"/>
                 <h1>Fitness</h1> 
-                <p>Kraft- undd Ausdauertraining, professionell begleitet.<br/> 
+                <p>Kraft- und Ausdauertraining, professionell begleitet.<br/> 
                     Wir sind <a href="http://fitness-guide.ch">Fitnessguide</a> zertifiziert.</b>
                     <br>(3-Sterne Part Time Care)</b><br/>            
                     <p class="hidden"><a href="docs/1 - Die regelmässige körperliche Aktivität.pdf" target="_blank"><b></b>Warum regelmässige Aktivität?</b><br/>
