--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h1>Aktuell</h1>
                 <b></b> 
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/exclamation-mark-9765.svg"/>
-                <a class="more" href="img/movimento_final_070824_h.265.mov" target="_blank">Schau in unseren Vorstellungsfilm rein!</a><br> 
+                <a class="more" href="img/movimento_final_070824_h.265.mov" target="_blank">Schauen Sie in unseres Firmenportrait rein!</a><br> 
                
                     
                     <b>Nordic Walking:<br>  
