--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h1>Aktuell</h1>
                 <b></b> 
                 
-                <video width="320" height="270" controls autoplay>
+                <video width="320" height="270" controls preload>
 
                     <source src="img/movimento_final_070824_h.265.mov" type="video/mp4“></source>
                     
