--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
                 <a href="docs/2 - Das Aufwärmen.pdf" target="_blank"><b></b>Aufwärmen</b><br/>
                 <a href="docs/3 - Das Ausdauertraining.pdf" target="_blank"><b></b>Ausdauer</b><br/>
                 <a href="docs/4 - Das Krafttraining.pdf" target="_blank"><b></b>Kraft</b><br/>
-                <a href="docs/5 - Das Dehnen.pdf" target="_blank"><b></b>Dehnen</b><br/>
-                <a href="fitness.html" role="button"></p>
+                <a href="docs/5 - Das Dehnen.pdf" target="_blank"><b></b>Dehnen</b><br/></p>
+                <a class="more" href="fitness.html" role="button">
                     Mehr&hellip;
                 </a>
             </div>
