--- a/Vera-schmidt.html
+++ b/Vera-schmidt.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Vera&nbsp;Schmidt</h2>
-            <p>Dipl.&nbsp;Physiotherapeutin<br/>
+            <p>Physiotherapeutin<br/>
             <a href="mailto:movimento@physio-hin.ch">E-Mail</a></p>
         </div>
     </div>
