--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Barbara&nbsp;Longo</h2>
-            <p>Dipl. Physiotherapeutin FH<br/><a href="mailto:barbaralongo.movimento@physio-hin.ch">E-Mail</a></p>
+            <p>Physiotherapeutin<br/><a href="mailto:barbaralongo.movimento@physio-hin.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
