--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -112,7 +112,7 @@
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Melina&nbsp;Dürr</h2>
             <p>
-                Dipl. Physiotherapeutin FH<br/>
+                Physiotherapeutin <br/>
                 <a href="mailto:melinaduerr.movimento@physio-hin.ch">E-Mail</a>
             </p>
         </div>
