--- a/team.html
+++ b/team.html
@@ -111,7 +111,7 @@
                 <div class="col-md-5 col-xs-12">
                     <h1>Barbara&nbsp;Longo</h1>
                     <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
+                        Physiotherapeutin
                         <br/>
                         <a href="mailto:barbaralongo.movimento@physio-hin.ch">E-Mail</a>
                         <br/>
@@ -128,7 +128,7 @@
                 <div class="col-md-5 col-xs-12">                    
                     <h1>Melina&nbsp;Dürr</h1>
                     <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
+                        Physiotherapeutin&nbsp
                         <br/>
                         <a href="mailto:melinaduerr.movimento@physio-hin.ch">E-Mail</a>
                         <br/>
@@ -145,35 +145,35 @@
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">                
-                    <h1>Tobias&nbsp;Elmiger</h1>
-                    <p>
-                        Dipl.&nbsp;Physiotherapeut
-                        <br/>
-                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
-                        <br/>
-                        <a href="Tobias Elmiger.html" role="button">
-                            Mehr&hellip;
-                        </a>
-                    </p>
-                </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/tobias.jpg">
-            </div>
-        </div>
-        <div class="col-sm-6 col-xs-12">
-            <div class="portrait-well">
-                <div class="col-md-5 col-xs-12">
                     <h1>Vera&nbsp;Schmidt</h1>
                     <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
+                        Physiotherapeutin
                         <br/>
                         <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
                         <br/>
                         <a href="Vera-schmidt.html" role="button">
                             Mehr&hellip;
-                        </a>                        
+                        </a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Vera.jpg">
+            </div>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Delia&nbsp;Schaub</h1>
+                    <p>
+                        Physiotherapeutin
+                        <br/>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
+                        <br/>
+                        <a href="delia schaub.html" role="button">
+                            Mehr&hellip;
+                        </a>                        
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/delia schaub.jpg">
             </div>
         </div>
     </div>
