--- a/delia schaub.html
+++ b/delia schaub.html
@@ -110,7 +110,7 @@
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Delias&nbsp;Schaub</h2>
+            <h2>Delia&nbsp;Schaub</h2>
             <p>Physiotherapeutin<br/>
             <a href="mailto:movimento@physio-hin.ch">E-Mail</a></p>
         </div>
