--- a/index.html
+++ b/index.html
@@ -408,7 +408,12 @@
                     <td>07:30 – 20:00</td>
                     <td>&nbsp;</td>
                     <td>09:00 – 11:00</td>
-                    <td>15:15 – 20:00</td>
+                    <tr>
+                        <td nowrap='true'></td>
+                        <td></td>
+                        <td>&nbsp;</td>
+                        <td>15:15 – 20:00</td>
+                    </tr>   
                 </tr>
                
                 
