--- a/team.html
+++ b/team.html
@@ -249,6 +249,24 @@
             </div>   
         </div>                                
     </div> 
+    <div class="row">           
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <h1>Jessica&nbsp;Simon</h1>
+                    <p>
+                        Bewegungspädagogin
+                        <br/>
+                        <a href="mailto:movimento@physio-hin.ch">E-Mail</a>
+                        <br/<>
+                        <a href="Jessica.html" role="button">
+                                Mehr&hellip;
+                        </a>                        
+                    </p>    
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Jessica.jpeg">
+            </div>
+            </div> 
     <div class="row">             
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
