--- a/Jessica.html
+++ b/Jessica.html
@@ -126,6 +126,10 @@
             </div>
     </div>
     <div class="row">
+        <div class="col-lg-2 col-xs-3">Seit 2024</div>
+        <div class="col-xs-9">Bewegungspädagogin Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
+    </div>
+    <div class="row">
         <div class="col-lg-2 col-xs-3">2020-2024 </div>
         <div class="col-xs-9">Bewegungspädagogin Kunstturnzentrum NKL Liestal</div>
     </div>
