--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </div>
         <div class="section col-xs-12">
             <p>
-                Herzlich willkommen – Ihre Gesundheit steht bei uns im Zentrum.
+                Herzlich willkommen – Ihre Gesundheit steht bei uns im Zentrum.1
             </p>
             <p>
                 In unseren Räumlichkeiten in Oberdorf bieten wir ein grosses Spektrum an Physiotherapie und
