--- a/team.html
+++ b/team.html
@@ -243,7 +243,7 @@
                         <br/<>
                     </p>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="physiomovimento-test.github.io/img/Neue Fotos/Melina.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/Neue Fotos/Lumturije.jpg">
             </div> 
         </div> 
     </div> 
