--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     Eine Download-Version steht unter <a href="img/movimento_final_070824_h.265.mov">Link-Addresse</a> zum Abruf bereit. 
                     </video>
                     
-                    <p>Bitte beachten Sie unsere <a href="physiomovimento-test.github.io/docs/spezielle Öffnungszeiten Ostern-Pfingsten 2025.pdf" target="_blank"><b>Öffnungszeiten an Ostern/Pfingsten</b></a></p>
+                    <p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2025.pdf" target="_blank"><b>Öffnungszeiten an Ostern bis Pfingsten</b></a></p>
                     </b>
                     <p class="hidden"><b>Training nur nach Terminvereinbarung:<a href="https://doodle.com/poll/ri58wrk3n97s62mb?utm_source=poll&utm_medium=link" target="_blank"><b></b><br/> Link zum Doodle</b> <br/></p>
                 <p class="hidden"><b><font color="#ec580f">Maskenpflicht</font> im ganzen Movimento!</b><br/></p>
