--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
             <div class="new well">
      
                 <h1>Aktuell</h1>
-                <p>Bitte beachten Sie unsere <a href="docs/spezielle Öffnungszeiten Ostern-Pfingsten 2025.pdf" target="_blank"><b>Öffnungszeiten an Ostern bis Pfingsten</b></a></p>
+                <p>Bundesfeiertag 1. August geschlossen</p>
                     </b>
                 <video src="img/movimento_final_070824_h.mp4" width=320  height=240 controls poster="img/Movimoento header.png">
                     Dies Video kann in Ihrem Browser nicht wiedergegeben werden.<br>
