--- a/physio.html
+++ b/physio.html
@@ -136,6 +136,10 @@
                 <p>Eine Therapiesitzung dauert in der Regel 25 Minuten.</p>
             </div>
         </div>
+    <!--
+    <div class="row">                     
+    </div>    
+    --> 
         <div class="footer col-xs-12">
             <h2>Kontakt</h2>
             <p>
