--- a/team.html
+++ b/team.html
@@ -264,9 +264,10 @@
         </div> 
 
 
-   
+        <div>
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
+
         <div class="footer col-xs-12">
             <h2>Kontakt</h2>
             <p>
