--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <img class="icon col-lg-2 col-md-3 col-sm-3 col-xs-2" src="img/question-solid.svg"/>
                 <h1>Häufig gestellte Fragen</h1>
                 <br/>
-                <a class="more" href="docs/FAQ.pdf" role="button">
+                <a class="more" href="physiomovimento-test.github.io/docs/FAQ_HIN.pdf" role="button">
                     FAQ&hellip;
                 </a>
                 <a href="docs/Datenschutzerklärung.pdf" target="_blank"><b></b>Datenschutzerklärung Website</b><br/></a>
@@ -327,7 +327,7 @@
                 <a class="more" href="physio.html" role="button">
                     Mehr&hellip;
                 </a>
-            </div>
+            
         </div>        
         <div class="col-sm-6">
             <div class="well">
