--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <a class="more" href="physio.html" role="button">
                     Mehr&hellip;
                 </a>
-            
+            </div> 
         </div>        
         <div class="col-sm-6">
             <div class="well">
