--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
             <div class="new well">
      
                 <h1>Aktuell</h1>
+                <p>Fr., 5.12. ab 19h00 geschlossen wegen Weihnachtsessen!</p>
+                <p >Bitte beachten Sie unsere <a href="
+                    docs/spezielle Öffnungszeiten Weihnachten:Neujahr.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 
                 <video src="img/movimento_final_070824_h.mp4" width=320  height=240 controls poster="img/Movimoento header.png">
                     Dies Video kann in Ihrem Browser nicht wiedergegeben werden.<br>
