--- a/Vera-schmidt.html
+++ b/Vera-schmidt.html
@@ -140,6 +140,8 @@
     </div>
     <div class="row">
         <ul>
+            <li>Schwindeltherapie Grundkurs</li>
+	        <li>Diplomierte Spiraldynamik ® Fachkraft Level Intermediate Med</li>
             <li>Spiraldynamik ® Lehrgang Basic MED </li>
             <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level I</li>
             <li>Motivational Interviewing ZHAW</li>
