--- a/delia schaub.html
+++ b/delia schaub.html
@@ -149,6 +149,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>Dry Needling Therapeutin DVS ®</li>
             <li>Bachelor of Science in Physiotherapie BFH 2024</li>
             
             
