--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -158,6 +158,7 @@
     </div>
     <div class="row">
         <ul>
+            <li>Schwindeltherapie Grundkurs</li>
             <li>Zertifizierte GLA:D® Schweiz Arthrose Therapeutin</li>
             <li>Funktionsorientierte Faszien Therapie (FOFT)</li>
             <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
