--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
         <div class="col-sm-6">
             <div class="new well">
      
-                <h1>Aktuell</h1>
-                <p>Fr., 5.12. ab 19h00 geschlossen wegen Weihnachtsessen!</p>
+                <h1>Aktuell</h1
                 <p >Bitte beachten Sie unsere <a href="
                     docs/spezielle Öffnungszeiten Weihnachten:Neujahr.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
                 
