--- a/index.html
+++ b/index.html
@@ -270,10 +270,8 @@
         <div class="col-sm-6">
             <div class="new well">
      
-                <h1>Aktuell</h1
-                <p >Bitte beachten Sie unsere <a href="
-                    docs/spezielle Öffnungszeiten Weihnachten:Neujahr.pdf" target="_blank"><b>Öffnungszeiten Weihnachten/Neujahr</b></a></p>
-                
+                <h1>Aktuell</h1>
+
                 <video src="img/movimento_final_070824_h.mp4" width=320  height=240 controls poster="img/Movimoento header.png">
                     Dies Video kann in Ihrem Browser nicht wiedergegeben werden.<br>
                     Eine Download-Version steht unter <a href="img/movimento_final_070824_h.265.mov">Link-Addresse</a> zum Abruf bereit. 
